complete popular sizes

--- a/app/blocks/popular-cars/popular-cars.jade
+++ b/app/blocks/popular-cars/popular-cars.jade
@@ -1,4 +1,6 @@
 mixin popular-cars()
+	// start popular-cars
+
 	section.popular-cars&attributes(attributes)
 		.popular-cars__container.container
 			h2.popular-cars__title Популярное авто
@@ -35,3 +37,5 @@ mixin popular-cars()
 					figure.popular-cars__brand
 						img.popular-cars__logo(src="assets/images/content/car-brand-2.png", alt="")
 						span.popular-cars__name KIA
+
+	// end popular-cars
