--- a/app/blocks/popular-sizes/popular-sizes.jade
+++ b/app/blocks/popular-sizes/popular-sizes.jade
@@ -1,79 +1,90 @@
 mixin popular-sizes()
+	// start popular-sizes
+
 	section.popular-sizes&attributes(attributes)
 		.popular-sizes__container.container
-			h2.popular-sizes__title.title Популярные типоразмеры
+			.row
+				.col.popular-sizes__col
+					h2.popular-sizes__title.title Популярные типоразмеры
 
-			ul.popular-sizes__list
+					ul.popular-sizes__list
 
-				li.popular-sizes__item
-					.popular-sizes__size R13
-					.popular-sizes__links
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-				li.popular-sizes__item
-					.popular-sizes__size R13
-					.popular-sizes__links
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-				li.popular-sizes__item
-					.popular-sizes__size R13
-					.popular-sizes__links
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-				li.popular-sizes__item
-					.popular-sizes__size R13
-					.popular-sizes__links
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-				li.popular-sizes__item
-					.popular-sizes__size R13
-					.popular-sizes__links
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-				li.popular-sizes__item
-					.popular-sizes__size R13
-					.popular-sizes__links
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
-						a.popular-sizes__link(href="#") 175/70 R13
+						li.popular-sizes__item
+							.popular-sizes__size R13
+							.popular-sizes__links
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+						li.popular-sizes__item
+							.popular-sizes__size R14
+							.popular-sizes__links
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+						li.popular-sizes__item
+							.popular-sizes__size R15
+							.popular-sizes__links
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+						li.popular-sizes__item
+							.popular-sizes__size R16
+							.popular-sizes__links
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+						li.popular-sizes__item
+							.popular-sizes__size R17
+							.popular-sizes__links
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+						li.popular-sizes__item
+							.popular-sizes__size R18
+							.popular-sizes__links
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
+								a.popular-sizes__link(href="#") 175/70 R13
 
-			img.popular-sizes__stamp(src="assets/images/content/stamp-nokian.png", alt="stamp-nokian")
+					button.popular-sizes__more
+						span Показать все
+							+icon('arrow-down', true).popular-sizes__icon
+
+					img.popular-sizes__stamp(src="assets/images/content/stamp-nokian.png", alt="stamp-nokian")
+
+
+	// end popular-sizes
