--- a/app/blocks/text/text.jade
+++ b/app/blocks/text/text.jade
@@ -1,4 +1,6 @@
 mixin text()
+
+	// start text
 	section.text&attributes(attributes)
 		.text__container.container
 			.row
@@ -16,3 +18,4 @@ mixin text()
 						p Мы являемся официальными дилерами компаний с мировыми именами: Continental, Bridgestone, Pirelli, Matador, Michelin, Tigar, Barum, Toyo, Gislaved. В распоряжении наших клиентов качественный шиномонтаж, а также сезонное хранение шин. Продажа шин  и дисков – наша основная спецификация, поэтому мы знаем о них все.
 
 							
+	// end text
