--- a/app/pages/index.jade
+++ b/app/pages/index.jade
@@ -23,6 +23,9 @@ block head
 block content
 	.page__nav-bg
 	+header()
+
+
+	// start page inner
 	.page__inner
 		+map()
 		+brands()
@@ -30,7 +33,10 @@ block content
 		+news()
 		+popular-cars()
 		+popular-sizes()
+
 		+text()
+
+	// end page inner
 
 	+footer()
 	+popup-auth()#auth.mfp-hide
