--- a/app/styles/helpers/common.styl
+++ b/app/styles/helpers/common.styl
@@ -60,10 +60,12 @@
 
 .title
 	color #333333
-	font-size 24px
+	font-size 20px
 	font-weight 600
 	font-family $a
 	line-height 1.5
+	+rmin($sm)
+		font-size 24px
 	a
 		position relative
 		color #268ae1
