complete popular cars

--- a/app/blocks/popular-cars/popular-cars.jade
+++ b/app/blocks/popular-cars/popular-cars.jade
@@ -3,39 +3,52 @@ mixin popular-cars()
 
 	section.popular-cars&attributes(attributes)
 		.popular-cars__container.container
-			h2.popular-cars__title Популярное авто
-			.popular-cars__carousel
-				a.popular-cars__link(href="#")
-					figure.popular-cars__brand
-						img.popular-cars__logo(src="assets/images/content/car-brand-1.png", alt="")
-						span.popular-cars__name Hyundai
-				a.popular-cars__link(href="#")
-					figure.popular-cars__brand
-						img.popular-cars__logo(src="assets/images/content/car-brand-2.png", alt="")
-						span.popular-cars__name KIA
-				a.popular-cars__link(href="#")
-					figure.popular-cars__brand
-						img.popular-cars__logo(src="assets/images/content/car-brand-3.png", alt="")
-						span.popular-cars__name BMW
-				a.popular-cars__link(href="#")
-					figure.popular-cars__brand
-						img.popular-cars__logo(src="assets/images/content/car-brand-4.png", alt="")
-						span.popular-cars__name Audi
-				a.popular-cars__link(href="#")
-					figure.popular-cars__brand
-						img.popular-cars__logo(src="assets/images/content/car-brand-5.png", alt="")
-						span.popular-cars__name Wolksvagen
-				a.popular-cars__link(href="#") 
-					figure.popular-cars__brand
-						img.popular-cars__logo(src="assets/images/content/car-brand-6.png", alt="")
-						span.popular-cars__name Ford
-				a.popular-cars__link(href="#")
-					figure.popular-cars__brand
-						img.popular-cars__logo(src="assets/images/content/car-brand-1.png", alt="")
-						span.popular-cars__name Hyundai
-				a.popular-cars__link(href="#")
-					figure.popular-cars__brand
-						img.popular-cars__logo(src="assets/images/content/car-brand-2.png", alt="")
-						span.popular-cars__name KIA
+
+			.row
+				.col
+
+					h2.popular-cars__title.title Популярное авто
+			
+					.popular-cars__carousel
+						a.popular-cars__link(href="#")
+							.popular-cars__w
+								figure.popular-cars__brand
+									img.popular-cars__logo(src="assets/images/content/car-brand-1.png", alt="")
+								span.popular-cars__name Hyundai
+						a.popular-cars__link(href="#")
+							.popular-cars__w
+								figure.popular-cars__brand
+									img.popular-cars__logo(src="assets/images/content/car-brand-2.png", alt="")
+								span.popular-cars__name KIA
+						a.popular-cars__link(href="#")
+							.popular-cars__w
+								figure.popular-cars__brand
+									img.popular-cars__logo(src="assets/images/content/car-brand-3.png", alt="")
+								span.popular-cars__name BMW
+						a.popular-cars__link(href="#")
+							.popular-cars__w
+								figure.popular-cars__brand
+									img.popular-cars__logo(src="assets/images/content/car-brand-4.png", alt="")
+								span.popular-cars__name Audi
+						a.popular-cars__link(href="#")
+							.popular-cars__w
+								figure.popular-cars__brand
+									img.popular-cars__logo(src="assets/images/content/car-brand-5.png", alt="")
+								span.popular-cars__name Wolksvagen
+						a.popular-cars__link(href="#")
+							.popular-cars__w
+								figure.popular-cars__brand
+									img.popular-cars__logo(src="assets/images/content/car-brand-6.png", alt="")
+								span.popular-cars__name Ford
+						a.popular-cars__link(href="#")
+							.popular-cars__w
+								figure.popular-cars__brand
+									img.popular-cars__logo(src="assets/images/content/car-brand-1.png", alt="")
+								span.popular-cars__name Hyundai
+						a.popular-cars__link(href="#")
+							.popular-cars__w
+								figure.popular-cars__brand
+									img.popular-cars__logo(src="assets/images/content/car-brand-2.png", alt="")
+								span.popular-cars__name KIA
 
 	// end popular-cars
