--- a/app/blocks/popular-cars/popular-cars.styl
+++ b/app/blocks/popular-cars/popular-cars.styl
@@ -1,2 +1,114 @@
 .popular-cars
-	display block
+	background #fff 
+	&__container
+		padding-top 30px
+		padding-bottom 30px
+		+rmin($sm)
+			padding-top 40px
+			padding-bottom 40px
+		+rmin($lg)
+			padding-top 50px
+			padding-bottom 50px
+		
+	&__title
+		margin-bottom 20px
+		+rmin($lg)
+			margin-bottom 30px
+
+	&__carousel
+		border 1px solid #e9e9e9
+
+	&__link
+		position relative
+		border 1px solid #e9e9e9
+		border-width 0 1px 0 0
+		height 100px
+		background-color #ffffff
+		color #565a5f
+		font-size 16px
+		font-weight 400
+		line-height 24px
+		text-align center
+		text-decoration none
+		box-shadow none
+		tr(all .3s ease)
+		+rmin($sm)
+			height 140px
+		&:hover
+			box-shadow 0 10px 36px rgba(64, 78, 84, 0.08)
+			tr(all .3s ease)
+			
+			.popular-cars__name
+				color #268ae1
+				letter-spacing 0.48px
+				box-shadow inset 0 -1px 0 0 #268ae1
+				tr(all .3s ease)
+
+	&__w
+		padding-bottom 10px
+		height 100%
+		display flex
+		align-items center
+		flex-direction column
+		flex-wrap nowrap
+		+rmin($sm)
+			padding-bottom 20px
+	&__brand
+		// position absolute
+		// top 50%
+		// left 50%
+		padding-top 15px
+		display flex
+		justify-content center
+		align-items flex-start
+		// transform translate(-50%, -50%)
+		+rmin($sm)
+			padding-top 30px
+		
+		img
+			max-width 80%
+			+rmin($sm)
+				max-width 100%
+
+	// &__logo
+	// 	margin-bottom 15px
+
+	&__name
+		margin-top auto 
+		tr(all .3s ease)
+		
+	&__arrow 
+		resetbutton()
+		position absolute
+		z-index 1
+		top 50%
+		width 30px
+		height 30px
+		box-shadow 0 6px 14px rgba(0, 0, 0, 0.08)
+		background-color #ffffff
+		border-radius 50%
+		transform translateY(-50%)
+		+rmin($sm)
+			width 40px
+			height 40px
+	&__arrow-icon
+		position absolute
+		top 50%
+		left 50%
+		width 8px
+		height 12px
+		
+		transform translate(-50%, -50%) 
+		
+	&__arrow_prev
+		left -15px
+		.popular-cars__arrow-icon
+			left calc(50% - 2px)
+	&__arrow_next
+		right -15px
+		.popular-cars__arrow-icon
+			left calc(50% + 2px)
+			transform translate(-50%, -50%)  rotate(180deg) 
+			 
+
+	
