--- a/app/blocks/article/article.styl
+++ b/app/blocks/article/article.styl
@@ -1,2 +1,60 @@
 .article
-	display block
+	position relative
+	
+	&:hover
+		.article__inner
+			box-shadow 0 10px 30px rgba(70, 76, 82, 0.1)
+			tr(all .3s ease)
+		.article__title
+			color #268ae1
+			tr(all .3s ease)
+	&__link
+		position absolute
+		z-index 1
+		top 0
+		left 0
+		width 100%
+		height 100%
+		cursor pointer
+		
+	&__inner
+		margin-left 10px
+		margin-right 10px
+		display flex
+		flex-direction column
+		height 100%
+		
+		box-shadow 0 1px 4px rgba(70, 76, 82, 0.08)
+		background-color #ffffff
+		tr(all .3s ease)
+		
+	&__image
+		margin auto
+		
+		
+	&__w
+		padding 20px
+		height 100%
+		display flex
+		flex-direction column
+		
+	&__title
+		margin-bottom 15px
+		color #333333
+		font-family $aB
+		font-size 16px
+		font-weight 700
+		line-height 1.5
+		tr(all .3s ease)
+		
+	&__text
+		color #666666
+		line-height 1.571
+
+	&__meta
+		margin-top auto
+		font-size 13px
+		color #9ea0a1
+		line-height 1
+
+		
