--- a/app/blocks/news/news.styl
+++ b/app/blocks/news/news.styl
@@ -11,7 +11,6 @@
 		
 	&__articles
 		position relative
-	
 		
 	&__article
 		margin-bottom 30px
@@ -22,24 +21,20 @@
 		
 		+rmin($lg)
 			margin-bottom 40px
-			
-			
 		
 	&__button-w
 		text-align center
 
 	&__button
-		// background-color #268ae1
 		padding-top 16px
 		padding-right 25px
 		padding-bottom 10px
 		padding-left 25px
-		font-family $a 
+		font-family $a
+		font-size 16px
 		font-weight 500
 		text-transform none
 		letter-spacing 0
-
-		
 
 	&__arrow 
 		resetbutton()
