--- a/app/blocks/popular-cars/popular-cars.styl
+++ b/app/blocks/popular-cars/popular-cars.styl
@@ -35,6 +35,7 @@
 		+rmin($sm)
 			height 140px
 		&:hover
+			z-index 1
 			box-shadow 0 10px 36px rgba(64, 78, 84, 0.08)
 			tr(all .3s ease)
 			
