--- a/app/blocks/article/article.styl
+++ b/app/blocks/article/article.styl
@@ -1,6 +1,5 @@
 .article
 	position relative
-	
 	&:hover
 		.article__inner
 			box-shadow 0 10px 30px rgba(70, 76, 82, 0.1)
@@ -18,12 +17,11 @@
 		cursor pointer
 		
 	&__inner
-		margin-left 10px
-		margin-right 10px
+		// margin-left 10px
+		// margin-right 10px
 		display flex
 		flex-direction column
 		height 100%
-		
 		box-shadow 0 1px 4px rgba(70, 76, 82, 0.08)
 		background-color #ffffff
 		tr(all .3s ease)
