--- a/app/blocks/badge/badge.styl
+++ b/app/blocks/badge/badge.styl
@@ -1,2 +1,42 @@
 .badge
-	display block
+	&__w
+		position relative
+		padding-top 2px
+		padding-right 4px
+		padding-bottom 2px
+		padding-left 6px
+		height 20px
+		display inline-block
+		vertical-align middle
+	&__icon
+		position absolute
+		top 0
+		right -10px
+		width 10px
+		height 100%
+
+	&__text
+		position relative
+		z-index 1
+		color #ffffff
+		font-family $o
+		font-size 11px
+		font-weight 400
+		line-height 1
+		
+.badge_sale
+	.badge__w
+		background #e93f0a
+	.badge__icon
+		fill #e93f0a
+.badge_best
+	.badge__w
+		background #79d043 
+	.badge__icon
+		fill #79d043
+.badge_recommend
+	.badge__w
+		background #268ae1
+	.badge__icon
+		fill #268ae1
+	
