--- a/app/blocks/featured/featured.jade
+++ b/app/blocks/featured/featured.jade
@@ -1,11 +1,14 @@
 mixin featured()
+	// start featured
+
 	section.featured&attributes(attributes)
 		.featured__container.container
-			h2.featured__title Хиты продаж
 
-			.featured__tabs.tabs
-				ul.tabs__nav.service__tabs-nav
-					li.tabs__item.tabs__item_active
+			h2.featured__title.title Хиты продаж
+
+			.featured__tabs.tabs.tabs_featured
+				ul.tabs__nav
+					li.tabs__item
 						a.tabs__link() Популярное
 					li.tabs__item
 						a.tabs__link() Акция
@@ -17,115 +20,178 @@ mixin featured()
 						a.tabs__link() Диски
 
 				.tabs__content
-					#tab-1.tabs__tab.tabs__tab_active 1
+					.tabs__tab 1
 
-					#tab-2.tabs__tab 2
+					.tabs__tab 2
 
-					#tab-3.tabs__tab 3
+					.tabs__tab 3
 
-					#tab-4.tabs__tab 4
+					.tabs__tab.tabs__tab_active 
 
-					#tab-5.tabs__tab 5
+						.featured__list
+							article.col-12.featured__card.card
 
+								.card__inner
+									.card__size 13-17"
 
+									.card__meta
+										a.card__fav(href="#")
+											+icon('fav-icon', true).card__fav-icon
+										a.card__views(href="#")
+											+icon('view-icon', true).card__views-icon
+										a.card__compare(href="#")
+											+icon('chart-icon', true).card__compare-icon
 
-			.featured__list
-				article.featured__card.card
-					.card__size 13-17"
-					figure
-						img(src="assets/images/content/tyre.jpg", alt="tyre")
+									a.card__image(href="#")
+										img(src="assets/images/content/tyre.jpg", alt="tyre")
 
-					.card__season
-						+icon('types-winter', true).card__season-icon
-						.card__season-text Зимняя
+									.card__season
+										+icon('types-winter', true).card__season-icon
+										.card__season-text Зимняя
 
-					.card__badges
-						.card__badge.badge.badge_sale акция
+									.card__badges
+										.card__badge.badge.badge_sale
+											.badge__w
+												+icon('badge', true).badge__icon 
+												span.badge__text акция
+										.card__badge.badge.badge_best
+											.badge__w
+												+icon('badge', true).badge__icon 
+												span.badge__text лучшая цена
+										.card__badge.badge.badge_recommend
+											.badge__w
+												+icon('badge', true).badge__icon 
+												span.badge__text рекомендуем
 
-					a.card__title(href="#") Nokian Hakka Black 205/50 ZR16 91W XL
+									a.card__title(href="#")
+										span Nokian Hakka Black 205/50 ZR16 91W XL
 
-					.card__availability 
-						+icon('presence-low').card__availability-icon
-						| В наличии: мало
+									.card__availability.card__availability_low В наличии: мало
 
-					.card__bottom
-						.card__price 5 230 руб.
-						a.card__button(href="#") Купить
-
-
-				article.featured__card.card
-					.card__size 13-17"
-					figure
-						img(src="assets/images/content/tyre.jpg", alt="tyre")
-
-					.card__season
-						+icon('tyres-all', true).card__season-icon
-						.card__season-text Всесезонная
-
-					.card__badge
-						.card__badge.badge.badge_sale акция
-						.card__badge.badge.badge_best лучшая цена
-						.card__badge.badge.badge_recommend рекомендуем
-
-					a.card__title(href="#") Nokian Hakka Black 195/50 ZR16 91W XL
-
-					.card__availability
-						+icon('presence-high', true).card__availability-icon
-						| В наличии: много
-
-					.card__bottom
-						.card__price 3 230 руб.
-						a.card__button(href="#") Купить
+									.card__bottom
+										.card__price 5 230 руб.
+										a.card__button.button.button_big(href="#") В корзину
 
 
-				article.featured__card.card.card_none
-					.card__size 13-17"
-					figure
-						img(src="assets/images/content/tyre.jpg", alt="tyre")
+							article.col-12.featured__card.card
+								.card__inner
+									.card__size 13-17"
 
-					.card__season
-						+icon('tyres-all', true).card__season-icon
-						.card__season-text Летняя
+									
 
-					a.card__title(href="#") Yokohama 107ZL 315/70 R22,5 156/152L 
-
-					.card__availability
-						+icon('presence-none', true).card__availability-icon 
-						| нет в наличии
-
-					.card__bottom
-						.card__price 4 230 руб.
-						a.card__button(href="#") Уведомить
+									.card__meta
+										a.card__fav(href="#")
+											+icon('fav-icon', true).card__fav-icon
+										a.card__views(href="#")
+											+icon('view-icon', true).card__views-icon
+										a.card__compare(href="#")
+											+icon('chart-icon', true).card__compare-icon
 
 
-				article.featured__card.card
-					.card__size 13-17"
-					figure
-						img(src="assets/images/content/tyre.jpg", alt="tyre")
+									a.card__image(href="#")
+										img(src="assets/images/content/tyre.jpg", alt="tyre")
 
-					.card__season
-						+icon('tyres-all', true).card__season-icon
-						.card__season-text Всесезонная
+									.card__season
+										+icon('tyres-all', true).card__season-icon
+										.card__season-text Всесезонная
 
-					.card__badge
-						.card__badge.badge.badge_sale акция
+									.card__badges
+										.card__badge.badge.badge_sale
+											.badge__w
+												+icon('badge', true).badge__icon 
+												span.badge__text акция
+										.card__badge.badge.badge_best
+											.badge__w
+												+icon('badge', true).badge__icon 
+												span.badge__text лучшая цена
+										
 
-					.card__badge
-						.card__badge.badge.badge_sale акция
-						.card__badge.badge.badge_best лучшая цена
-						.card__badge.badge.badge_recommend рекомендуем
+									a.card__title(href="#")
+										span Nokian Hakka Black 195/50 ZR16 91W XL
 
-					a.card__title(href="#") Goodyear Wrangler SilentArmor 275/60 R20
+									.card__availability.card__availability_high В наличии: много
 
-					.card__availability
-						+icon('presence-high', true).card__availability-icon 
-						| В наличии: 12 шт
+									.card__bottom
+										.card__price 3 230 руб.
+										a.card__button.button.button_big(href="#") В корзину
 
-					.card__bottom
-						.card__price 6 230 руб.
-						a.card__button(href="#") Купить
-		
-	
+
+							article.col-12.featured__card.card.card_out
+								.card__inner
+									.card__size 13-17"
+
+									.card__meta
+										a.card__fav(href="#")
+											+icon('fav-icon', true).card__fav-icon
+										a.card__views(href="#")
+											+icon('view-icon', true).card__views-icon
+										a.card__compare(href="#")
+											+icon('chart-icon', true).card__compare-icon
+
+									a.card__image(href="#")
+										img(src="assets/images/content/tyre.jpg", alt="tyre")
+
+									.card__season
+										+icon('tyres-summer', true).card__season-icon
+										.card__season-text Летняя
+
+									a.card__title(href="#")
+										span Yokohama 107ZL 315/70 R22,5 156/152L 
+
+									.card__availability.card__availability_none нет в наличии
+
+									.card__bottom
+										.card__price 4 230 руб.
+										a.card__button.button.button_big(href="#") Уведомить
+
+
+							article.col-12.featured__card.card
+								.card__inner
+									.card__size 13-17"
+
+									.card__meta
+										a.card__fav(href="#")
+											+icon('fav-icon', true).card__fav-icon
+										a.card__views(href="#")
+											+icon('view-icon', true).card__views-icon
+										a.card__compare(href="#")
+											+icon('chart-icon', true).card__compare-icon
+
+
+									a.card__image(href="#")
+										img(src="assets/images/content/tyre.jpg", alt="tyre")
+
+									.card__season
+										+icon('tyres-all', true).card__season-icon
+										.card__season-text Всесезонная
+
+									//- .card__badges
+									//- 	.card__badge.badge.badge_sale акция
+
+									.card__badges
+										.card__badge.badge.badge_sale
+											.badge__w
+												+icon('badge', true).badge__icon 
+												span.badge__text акция
+										.card__badge.badge.badge_recommend
+											.badge__w
+												+icon('badge', true).badge__icon 
+												span.badge__text рекомендуем
+
+									a.card__title(href="#")
+										span Goodyear Wrangler SilentArmor 275/60 R20
+
+									.card__availability.card__availability_high В наличии: 12 шт
+
+									.card__bottom
+										.card__price 6 230 руб.
+										a.card__button.button.button_big(href="#") В корзину
+						.featured__nav
+					.tabs__tab 5
+
+
+			
+	// end featured	
 
 
 	
