--- a/app/blocks/featured/featured.styl
+++ b/app/blocks/featured/featured.styl
@@ -1,2 +1,83 @@
 .featured
-	display block
+	background #fff 
+	&__container
+		position relative
+		padding-top 30px
+		padding-bottom 10px
+		+rmin($sm)
+			padding-top 40px
+		
+		+rmin($lg)
+			padding-top 50px
+			padding-bottom 20px
+
+	&__title
+		margin-bottom 10px
+		+rmin($sm)
+			margin-bottom 20px
+			display flex
+		+rmiт($md)
+			display flex
+		+rmin($lg)
+			margin-bottom 30px
+
+	&__tabs
+		.tabs__nav
+			+rmin($sm)
+				
+				position absolute
+				top 48px
+				right 15px
+				
+			+rmin($lg)
+				top 54px
+		
+	// &__list
+	// 	margin-left -30px
+	// 	margin-right -30px
+	// 	padding-left 30px
+	// 	padding-right 30px
+
+	
+	// &__card
+
+	&__arrow 
+		resetbutton()
+		position absolute
+		z-index 1
+		top calc(50% - 20px)
+		width 40px
+		height 40px
+		box-shadow 0 6px 14px rgba(0, 0, 0, 0.08)
+		background-color #ffffff
+		border-radius 50%
+		transform translateY(-50%)
+		+rmin($sm)
+			// width 40px
+			// height 40px
+			display none
+	&__arrow-icon
+		position absolute
+		top 50%
+		left 50%
+		width 8px
+		height 12px
+		transform translate(-50%, -50%) 
+		
+	&__arrow_prev
+		left 0
+		+rmin($sm)
+			left -5px
+		.featured__arrow-icon
+			left calc(50% - 2px)
+			// left 50%
+	&__arrow_next
+		right 0
+		+rmin($sm)
+			right -5px
+		.featured__arrow-icon
+			left calc(50% + 2px)
+			// left 50%
+			transform translate(-50%, -50%) rotate(180deg) 
+
+
