--- a/app/blocks/tabs/tabs.styl
+++ b/app/blocks/tabs/tabs.styl
@@ -61,3 +61,35 @@
 
 // .tabs_popup
 	
+
+.tabs_featured
+	
+	.tabs__nav
+		margin-bottom 0
+		border-bottom none
+		flex-wrap wrap
+		
+	.tabs__item
+		margin-right 30px
+		&:last-child
+			margin-right 0
+			
+	.tabs__item_active
+		
+		.tabs__link
+			padding-bottom 4px
+			color #268ae1
+			font-weight 400 
+			box-shadow inset 0 -2px 0 0 #268ae1
+			&:before
+				display none
+			
+	.tabs__link
+		+rmin($md)
+			padding-bottom 0
+			font-size 16px
+		&:hover
+			color #268ae1
+			
+			
+	
