--- a/app/blocks/brands/brands.styl
+++ b/app/blocks/brands/brands.styl
@@ -1,2 +1,29 @@
 .brands
-	display block
+	background-color #f3f4f6
+	&__container
+		padding-top 30px
+		padding-bottom 30px
+
+	&__title
+		margin-bottom 14px
+
+	// &__brands
+		
+
+	// &__brands
+		
+	&__brand
+		height 90px
+		
+		
+	&__brand-w
+		padding-left 3px
+		padding-right 3px
+		
+		
+		background-color #ffffff
+		border-radius 4px
+		box-shadow 0 10px 36px rgba(64, 78, 84, 0.15)
+	// &__image
+		
+	// &__name
