--- a/app/blocks/featured/featured.jade
+++ b/app/blocks/featured/featured.jade
@@ -1,3 +1,5 @@
+include ../cards/cards
+
 mixin featured()
 	// start featured
 
@@ -8,186 +10,47 @@ mixin featured()
 
 			.featured__tabs.tabs.tabs_featured
 				ul.tabs__nav
-					li.tabs__item
+					li.tabs__item.tabs__item_active
 						a.tabs__link() Популярное
 					li.tabs__item
 						a.tabs__link() Акция
 					li.tabs__item
 						a.tabs__link() Рекомендуем
-					li.tabs__item.tabs__item_active
+					li.tabs__item
 						a.tabs__link() Шины
 					li.tabs__item
 						a.tabs__link() Диски
 
 				.tabs__content
-					.tabs__tab 1
-
-					.tabs__tab 2
-
-					.tabs__tab 3
 
 					.tabs__tab.tabs__tab_active 
 
-						.featured__list
-							article.col-12.featured__card.card
+						#popularSlider.featured__list
+							+cards()
+						#popularNav.featured__nav
 
-								.card__inner
-									.card__size 13-17"
+					.tabs__tab 
+						#salesSlider.featured__list
+							+cards()
+						#salesNav.featured__nav
 
-									.card__meta
-										a.card__fav(href="#")
-											+icon('fav-icon', true).card__fav-icon
-										a.card__views(href="#")
-											+icon('view-icon', true).card__views-icon
-										a.card__compare(href="#")
-											+icon('chart-icon', true).card__compare-icon
+					.tabs__tab 
+						#recommendSlider.featured__list
+							+cards()
+						#recommendNav.featured__nav
 
-									a.card__image(href="#")
-										img(src="assets/images/content/tyre.jpg", alt="tyre")
+					.tabs__tab
 
-									.card__season
-										+icon('types-winter', true).card__season-icon
-										.card__season-text Зимняя
+						#tyresSlider.featured__list
+							+cards()
+						#tyresNav.featured__nav
+							
+					.tabs__tab 
+			
+						#disksSlider.featured__list
+							+cards()
+						#disksNav.featured__nav
 
-									.card__badges
-										.card__badge.badge.badge_sale
-											.badge__w
-												+icon('badge', true).badge__icon 
-												span.badge__text акция
-										.card__badge.badge.badge_best
-											.badge__w
-												+icon('badge', true).badge__icon 
-												span.badge__text лучшая цена
-										.card__badge.badge.badge_recommend
-											.badge__w
-												+icon('badge', true).badge__icon 
-												span.badge__text рекомендуем
-
-									a.card__title(href="#")
-										span Nokian Hakka Black 205/50 ZR16 91W XL
-
-									.card__availability.card__availability_low В наличии: мало
-
-									.card__bottom
-										.card__price 5 230 руб.
-										a.card__button.button.button_big(href="#") В корзину
-
-
-							article.col-12.featured__card.card
-								.card__inner
-									.card__size 13-17"
-
-									
-
-									.card__meta
-										a.card__fav(href="#")
-											+icon('fav-icon', true).card__fav-icon
-										a.card__views(href="#")
-											+icon('view-icon', true).card__views-icon
-										a.card__compare(href="#")
-											+icon('chart-icon', true).card__compare-icon
-
-
-									a.card__image(href="#")
-										img(src="assets/images/content/tyre.jpg", alt="tyre")
-
-									.card__season
-										+icon('tyres-all', true).card__season-icon
-										.card__season-text Всесезонная
-
-									.card__badges
-										.card__badge.badge.badge_sale
-											.badge__w
-												+icon('badge', true).badge__icon 
-												span.badge__text акция
-										.card__badge.badge.badge_best
-											.badge__w
-												+icon('badge', true).badge__icon 
-												span.badge__text лучшая цена
-										
-
-									a.card__title(href="#")
-										span Nokian Hakka Black 195/50 ZR16 91W XL
-
-									.card__availability.card__availability_high В наличии: много
-
-									.card__bottom
-										.card__price 3 230 руб.
-										a.card__button.button.button_big(href="#") В корзину
-
-
-							article.col-12.featured__card.card.card_out
-								.card__inner
-									.card__size 13-17"
-
-									.card__meta
-										a.card__fav(href="#")
-											+icon('fav-icon', true).card__fav-icon
-										a.card__views(href="#")
-											+icon('view-icon', true).card__views-icon
-										a.card__compare(href="#")
-											+icon('chart-icon', true).card__compare-icon
-
-									a.card__image(href="#")
-										img(src="assets/images/content/tyre.jpg", alt="tyre")
-
-									.card__season
-										+icon('tyres-summer', true).card__season-icon
-										.card__season-text Летняя
-
-									a.card__title(href="#")
-										span Yokohama 107ZL 315/70 R22,5 156/152L 
-
-									.card__availability.card__availability_none нет в наличии
-
-									.card__bottom
-										.card__price 4 230 руб.
-										a.card__button.button.button_big(href="#") Уведомить
-
-
-							article.col-12.featured__card.card
-								.card__inner
-									.card__size 13-17"
-
-									.card__meta
-										a.card__fav(href="#")
-											+icon('fav-icon', true).card__fav-icon
-										a.card__views(href="#")
-											+icon('view-icon', true).card__views-icon
-										a.card__compare(href="#")
-											+icon('chart-icon', true).card__compare-icon
-
-
-									a.card__image(href="#")
-										img(src="assets/images/content/tyre.jpg", alt="tyre")
-
-									.card__season
-										+icon('tyres-all', true).card__season-icon
-										.card__season-text Всесезонная
-
-									//- .card__badges
-									//- 	.card__badge.badge.badge_sale акция
-
-									.card__badges
-										.card__badge.badge.badge_sale
-											.badge__w
-												+icon('badge', true).badge__icon 
-												span.badge__text акция
-										.card__badge.badge.badge_recommend
-											.badge__w
-												+icon('badge', true).badge__icon 
-												span.badge__text рекомендуем
-
-									a.card__title(href="#")
-										span Goodyear Wrangler SilentArmor 275/60 R20
-
-									.card__availability.card__availability_high В наличии: 12 шт
-
-									.card__bottom
-										.card__price 6 230 руб.
-										a.card__button.button.button_big(href="#") В корзину
-						.featured__nav
-					.tabs__tab 5
 
 
 			
