--- a/app/blocks/featured/featured.styl
+++ b/app/blocks/featured/featured.styl
@@ -23,23 +23,25 @@
 
 	&__tabs
 		.tabs__nav
-			+rmin($sm)
-				
+			+rmin($md)
 				position absolute
-				top 48px
+				top 40px
 				right 15px
 				
 			+rmin($lg)
 				top 54px
+				
 		
-	// &__list
-	// 	margin-left -30px
-	// 	margin-right -30px
-	// 	padding-left 30px
-	// 	padding-right 30px
+		// .tabs__content
+		// 	position relative
 
-	
+
 	// &__card
+		
+	&__nav
+		margin-left -20px
+		margin-right -20px
+		display none
 
 	&__arrow 
 		resetbutton()
