--- a/app/blocks/brands/brands.jade
+++ b/app/blocks/brands/brands.jade
@@ -1,51 +1,55 @@
 mixin brands()
+	// start brands
+	
 	section.brands&attributes(attributes)
 
 		.brands__container.container
 			.row
 				h2.col-12.brands__title.title Популярные бренды шин и <a href="#">дисков</a>
 
-			.row.brands__brands
-				.brands__brands-nav
+			.brands__list-nav
+			.row.brands__list
 				a.col-12.brands__brand(href="#")
-					.brands__brand-w
-						figure.brand__image
-							img(src="assets/images/content/car-brand-1.png", alt="brand")
-						span.brand__name Continental
+					.brands__w
+						figure.brands__image
+							img(src="assets/images/content/brand-1.png", alt="Continental")
+						span.brands__name Continental
 
 				a.col-12.brands__brand(href="#")
-					.brands__brand-w
-						figure.brand__image
-							img(src="assets/images/content/car-brand-2.png", alt="brand")
-						span.brand__name Yokohama
+					.brands__w
+						figure.brands__image
+							img(src="assets/images/content/brand-2.png", alt="Yokohama")
+						span.brands__name Yokohama
 
 				a.col-12.brands__brand(href="#")
-					.brands__brand-w
-						figure.brand__image
-							img(src="assets/images/content/car-brand-3.png", alt="brand")
-						span.brand__name Hankook
+					.brands__w
+						figure.brands__image
+							img(src="assets/images/content/brand-3.png", alt="Hankook")
+						span.brands__name Hankook
 
 				a.col-12.brands__brand(href="#")
-					.brands__brand-w
-						figure.brand__image
-							img(src="assets/images/content/car-brand-4.png", alt="brand")
-						span.brand__name Nokian
+					.brands__w
+						figure.brands__image
+							img(src="assets/images/content/brand-4.png", alt="Nokian")
+						span.brands__name Nokian
 
 				a.col-12.brands__brand(href="#")
-					.brands__brand-w
-						figure.brand__image
-							img(src="assets/images/content/car-brand-5.png", alt="brand")
-						span.brand__name Matador
+					.brands__w
+						figure.brands__image
+							img(src="assets/images/content/brand-5.png", alt="Matador")
+						span.brands__name Matador
 
 				a.col-12.brands__brand(href="#")
-					.brands__brand-w
-						figure.brand__image
-							img(src="assets/images/content/car-brand-6.png", alt="brand")
-						span.brand__name Cordiant
+					.brands__w
+						figure.brands__image
+							img(src="assets/images/content/brand-6.png", alt="Cordiant")
+						span.brands__name Cordiant
 
 				a.col-12.brands__brand(href="#")
-					.brands__brand-w
-						figure.brand__image
-							img(src="assets/images/content/car-brand-1.png", alt="brand")
-						span.brand__name Continental
+					.brands__w
+						figure.brands__image
+							img(src="assets/images/content/brand-1.png", alt="brand")
+						span.brands__name Continental
 
+
+	// end brands
