--- a/app/blocks/map/map.styl
+++ b/app/blocks/map/map.styl
@@ -1,2 +1,141 @@
 .map
-	display block
+	position relative
+	height 350px
+	+rmin($md)
+		height 600px
+	&__object
+		position absolute
+		top 0
+		left 0
+		width 100%
+		height 100%
+	&__container
+		position relative
+		padding-top 50px
+		z-index 1
+		
+	&__top
+		border-bottom 1px solid #dadadf
+		padding-top 25px
+		margin-left 30px
+		margin-right 30px
+		background #FFF
+		 
+	&__addresses
+		position absolute
+		top 50px
+		left 15px
+		bottom 90px
+		border 1px solid #dadadf
+		padding-left 13px
+		padding-right 13px
+		// padding-bottom 30px
+		max-width 376px
+		height 466px
+		background-color #ffffff
+		border-radius 5px
+		box-shadow 0 2px 8px rgba(0, 0, 0, 0.1)
+		
+		display none
+		+rmin($md)
+			display block
+
+	&__addresses_hide
+		width 10px
+		height 10px
+		
+	&__w
+		display block
+		overflow hidden
+
+	&__w_hide
+		display none
+
+	&__item
+		&:nth-child(odd)
+			background #fff
+		
+		&:nth-child(even)
+			background #f5f6f8
+
+	&__close
+		resetbutton()
+		position absolute
+		top 0
+		left calc(100% + 10px)
+		padding-top 10px
+		padding-right 15px
+		padding-bottom 3px
+		padding-left 32px
+		height 32px
+		background-color #7f8fa4
+		color #ffffff
+		font-size 12px
+		line-height 1
+		cursor pointer
+		border-radius 4px
+		box-shadow 0 2px 8px rgba(0, 0, 0, 0.1)
+		&:after
+			position absolute
+			content '' 
+			top 50%
+			left 15px
+			retinaSprite($arrow_rounded_group)
+			transform translateY(-50%) rotate(0deg)
+			tr(all .3s ease)
+			
+
+
+	&__close_active
+		left 0
+		&:after
+			transform translateY(-50%) rotate(180deg)
+			tr(all .3s ease)
+
+	// &__icon
+	// 	position absolute
+	// 	top 50%
+	// 	left 15px
+
+	&__title
+		margin-bottom 15px
+		font-size 20px
+		line-height 1.5
+	&__list
+		position relative
+		// margin-right 5px
+		padding-right 14px
+		max-height 366px
+		margin-bottom 30px
+		
+	// &__item
+		
+	// &__address
+		
+	// &__phone
+
+	// &__work
+		
+	// &__buttons
+
+	// &__button
+	// 	&:hover
+
+
+	.simplebar-track 
+		&.simplebar-vertical
+			width 4px
+			background-color #eeeeee
+			border-radius 1px 2px 2px 2px
+			
+	.simplebar-scrollbar
+		right 0
+		width 4px
+		&:before
+			width 4px
+			border-radius 2px 2px 2px 2px
+			background-color #268ae1
+		
+		&.simplebar-visible
+			&:before
+				opacity 1
