--- a/app/blocks/map/map.jade
+++ b/app/blocks/map/map.jade
@@ -1,4 +1,6 @@
 mixin map()
+	// start map
+
 	section.map&attributes(attributes)
 		#map.map__object
 		.map__container.container
@@ -74,6 +76,6 @@ mixin map()
 								a.address__button.button(href="tel:+78123209140") Позвонить
 
 
-
+	// end map
 
 
